--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
-# The requirements.txt file lists the dependencies that are needed to be installed to run your project
-# you can add the list of your projects dependencies via `pip freeze > requirements.txt`
+appnope==0.1.0
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache==1.6.1
+certifi==2020.6.20
+chardet==3.0.4
+decorator==4.4.2
+goodreads-api-client==0.1.0.dev4
+idna==2.5
+ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1593235463433/work
+ipython-genutils==0.2.0
+jedi @ file:///Users/runner/miniforge3/conda-bld/jedi_1595018286626/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1595548966091/work
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1592500439797/work
+ptyprocess==0.6.0
+Pygments==2.6.1
+rauth==0.7.3
+requests==2.18.3
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
+traitlets==4.3.3
+urllib3==1.22
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1595859607677/work
+xmltodict==0.11.0
